# app-flare

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
.github/workflows/: check_version.yml  codeql.yml  guidelines_enforcer.yml  lint.yml  main.yml
app/: Makefile  Makefile.version
app/src/: addr.c  addr.h  apdu_handler.c  coin.h  crypto.c  crypto.h  crypto_helper.c  crypto_helper.h  eth_addr.h  eth_erc20.c  eth_erc20.h  eth_utils.c  eth_utils.h  hash.c  hash.h  parser.c  parser_impl.c  parser_impl.h  parser_impl_common.c  parser_impl_common.h  parser_impl_eth.c  parser_impl_eth.h  parser_print_common.c  parser_print_common.h  parser_txdef.h  rlp_def.h  tx_cchain.c  tx_cchain.h  tx_pchain.c  tx_pchain.h  uint256.c
app/src/common/: actions.h  main.c  parser.h  parser_common.h  tx.c  tx.h
app/src/evm/: apdu_handler_eth.c  apdu_handler_eth.h  coin_eth.h  crypto_eth.c  crypto_eth.h  eth_addr.c  eth_addr.h  eth_eip191.c  eth_eip191.h  eth_erc20.c  eth_erc20.h  eth_utils.c  eth_utils.h  parser_eth.c  parser_eth.h  parser_impl_eth.c  parser_impl_eth.h  parser_impl_evm_specific.c  parser_impl_evm_specific.h  rlp.c  rlp.h  tx_eth.c  tx_eth.h  uint256.c  uint256.h
docs/: APDUSPEC.md
fuzz/: fuzz_config.py  parser_parse.cpp  run-fuzz-crashes.py  run-fuzzers.py
js/: README.md  package.json
js/src/: consts.ts  helper.ts  index.ts  types.ts
tests/: expected_output.cpp  expected_output.h  parser_impl.cpp  testcases.h  testcases.json  ui_tests.cpp
tests/testvectors/: evm.json  testcases.json
tests/utils/: common.cpp  common.h
tests_zemu/: package.json
tests_zemu/tests/: common.ts  eip191.test.ts  eth_legacy.test.ts  eth_tests.test.ts  standard.test.ts  transactions.test.ts
